--- a/src/assets/scss/core/navbars/_navbar-vertical.scss
+++ b/src/assets/scss/core/navbars/_navbar-vertical.scss
@@ -260,7 +260,8 @@
                     }
 
                     .navbar-brand-img {
-                        max-height: 2.5rem;
+                        width: 100px;
+                        max-height: 100px;
                     }
 
                     // Navbar user
