--- a/src/assets/scss/core/cards/_card-profile.scss
+++ b/src/assets/scss/core/cards/_card-profile.scss
@@ -9,13 +9,14 @@
         max-width: 180px;
         border-radius: $border-radius;
         @extend .shadow;
-        transform: translate(-50%,-30%);
+        transform: translate(-50%, -30%);
         position: absolute;
         left: 50%;
         transition: $transition-base;
 
         &:hover {
-            transform: translate(-50%, -33%);
+            webkit-filter: blur(1.5px); /* Chrome, Safari, Opera */
+            filter: blur(1.5px);
         }
     }
 }
@@ -26,7 +27,7 @@
     > div {
         text-align: center;
         margin-right: 1rem;
-        padding: .875rem;
+        padding: 0.875rem;
 
         &:last-child {
             margin-right: 0;
@@ -38,12 +39,12 @@
             display: block;
         }
         .description {
-            font-size: .875rem;
+            font-size: 0.875rem;
             color: $gray-500;
         }
     }
 }
 
 .card-profile-actions {
-    padding: .875rem;
+    padding: 0.875rem;
 }
